(vendored_dirs vendor)

; (library
;  (name frontend)
;  (modes melange))

(library
 (name frontend_assets))

(rule
 (target ./frontend_assets.ml)
 (deps ./frontend_js/dist/main.js)
 (mode promote)
 (action
  (run
   ocaml-crunch
   ./frontend_js/dist
   --mode=plain
   --silent
   --output=%{target})))
