(vendored_dirs vendor)

; (library
;  (name frontend)
;  (modes melange))

(library
 (name frontend_assets))

(rule
 (target ./frontend_assets.ml)
 (deps ./frontend/dist/frontend_js.js)
 (mode promote)
 (action
  (run
   ocaml-crunch
   ./frontend/dist
   --mode=plain
   --silent
   --output=%{target})))
